--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,16 +10,8 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="3dp"
         android:background="@drawable/table_outside"
-        android:stretchColumns="*"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:stretchColumns="*">
 
         <TableRow
             android:layout_width="match_parent"
@@ -39,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="조도"
+                android:text="lux"
                 android:textSize="20sp" />
 
             <TextView
@@ -47,15 +38,16 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="조도"
+                android:text="Ra"
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/average_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="조도"
+                android:text="R1~R8ave"
                 android:textSize="20sp" />
 
         </TableRow>
@@ -77,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="색온도"
+                android:text="k"
                 android:textSize="20sp" />
 
             <TextView
@@ -85,15 +77,16 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="색온도"
+                android:text="Re"
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/average_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/table_inside"
                 android:gravity="center"
-                android:text="색온도"
+                android:text="R9~R14ave"
                 android:textSize="20sp" />
 
         </TableRow>
@@ -102,16 +95,8 @@
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
-        android:layout_width="396dp"
-        android:layout_height="276dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.151"/>
+        android:layout_width="match_parent"
+        android:layout_height="594dp" />
 
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
