--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -124,34 +122,27 @@
                             android:orientation="horizontal"></LinearLayout>
 
                         <TextView
-                            android:layout_width="90dp"
+                            android:layout_width="119dp"
                             android:layout_height="65dp"
                             android:layout_gravity="center"
+                            android:gravity="center"
                             android:text="조도\n(Lux)"
-                            android:textSize="20sp"
-                            android:gravity="center"></TextView>
+                            android:textSize="20sp"></TextView>
 
 
                         <EditText
                             android:id="@+id/editText_2"
-                            android:layout_width="247dp"
+                            android:layout_width="291dp"
                             android:layout_height="59dp"
                             android:layout_gravity="center"
                             android:background="@drawable/text_borde"
                             android:hint="입력하세요"
-                            android:maxLength="4"
-                            android:inputType="number" />
-
-                        <Button
-                            android:id="@+id/btn_set"
-                            style="@style/Widget.AppCompat.Button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="SET"></Button>
+                            android:inputType="number"
+                            android:maxLength="4" />
 
                     </LinearLayout>
 
-                    </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -160,11 +151,11 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="91dp"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:gravity="center"
@@ -173,18 +164,33 @@
 
                         <EditText
                             android:id="@+id/editText_3"
-                            android:layout_width="247dp"
+                            android:layout_width="289dp"
                             android:layout_height="51dp"
                             android:layout_gravity="center"
                             android:background="@drawable/text_borde"
                             android:hint="입력하세요"
-                            android:maxLength="4"
-                            android:inputType="number">
-                        </EditText>
+                            android:inputType="number"
+                            android:maxLength="4"></EditText>
 
 
                     </LinearLayout>
 
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_set"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/text_borde"
+                        android:text="SET">
+
+                    </Button>
 
                 </LinearLayout>
 
