--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -30,6 +30,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/illum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/table_inside"
@@ -37,6 +38,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/illum_cct"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/table_inside"
@@ -66,6 +68,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/temp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/table_inside"
@@ -73,6 +76,7 @@
                         android:textSize="20sp" />
 
                     <TextView
+                        android:id="@+id/temp_cct"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/table_inside"
